fixed loader shift

--- a/packages/scandipwa/src/route/Checkout/Checkout.style.scss
+++ b/packages/scandipwa/src/route/Checkout/Checkout.style.scss
@@ -34,8 +34,12 @@
         }
     }
 
-    &-SummaryFallback {
-        height: var(--summary-height);
+    &-SummaryFallbackStart {
+        min-height: 264px;
+    }
+
+    &-SummaryFallbackItem {
+        height: 120px;
     }
 
     &-FullPageLoader {
